--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,8 @@ services:
     # Environment variables for startup script
     # container will use these variables
     # to start the container with these define variables.
-    environment:
-      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
-      - "MYSQL_USER=${MYSQL_USER}"
-      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
-      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
+    env_file:
+      - ./.env
     # Mount init.sql file to automatically run
     # and create tables for us.
     # everything in docker-entrypoint-initdb.d folder
