--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3'
+version: "3.8"
 services:
   web:
-    # Path to dockerfile.
-    # '.' represents the current directory in which
-    # docker-compose.yml is present.
-    build: .
+    image: venky8283/flask_app:3.0
 
     # Mapping of container port to host
 
@@ -14,27 +11,15 @@ services:
     volumes:
       - ".:/exercise_3"
 
-    # Link database container to app container
-    # for rechability.
-    links:
-      - "database:exercisedb"
+    networks:
+      - app
 
-    command: ["flask", "run"]
-
-    environment:
-      - "FLASK_RUN_HOST=0.0.0.0"
-
-
-    depends_on:
-      - database
+    deploy:
+      replicas: 3
 
   database:
-
     # image to fetch from docker hub
-    build:
-      context: ./db
-      dockerfile: Dockerfile-db
-    #image: mysql/mysql-server:5.7
+    image: mysql/mysql-server:5.7
 
     # Environment variables for startup script
     # container will use these variables
@@ -47,3 +32,30 @@ services:
     # is executed as soon as container is up nd running.
     volumes:
       - "./db/init.sql:/docker-entrypoint-initdb.d/init.sql"
+
+    deploy:
+      replicas: 2
+
+    networks:
+      - app
+
+  viz:
+    # Visualizer image for swarm cluster.
+
+    image: dockersamples/visualizer
+
+    # Mapping container ports to host port
+
+    ports:
+      - "8080:8080"
+
+    # Mounting docker socket to container.
+
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
+    networks:
+      - app
+
+networks:
+  app:
