--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3.8"
 services:
   web:
+    # Path to dockerfile.
+    # '.' represents the current directory in which
+    # docker-compose.yml is present.
     image: venky8283/flask_app:3.0
 
     # Mapping of container port to host
 
     ports:
       - "5000:5000"
-    # Mount volume
-    volumes:
-      - ".:/exercise_3"
 
     networks:
       - app
